refactor: restructure server setup and remove unused files

--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "esModuleInterop": true,
-    "module": "nodenext",
-    "target": "esnext",
-    "types": [],
+    "target": "es2017",
+    "module": "commonjs",
+    "outDir": "dist",
+    "strict": true,
+    "esModuleInterop": true
   }
 }
